--- a/papel.html
+++ b/papel.html
@@ -12,6 +12,48 @@
 <body background="img/persianafull.jpg">
     <h1><strong>Dalva Decorações</strong></h1>
 
+    <div class="container">
+        <a href="img/pa01.jpg" target="_blank">
+            <div id="item"><img src="img/pa01.jpg" alt=""></div>
+        </a>
+        <a href="img/pa02.jpg" target="_blank">
+            <div id="item"><img src="img/pa02.jpg" alt=""></div>
+        </a>
+        <a href="img/pa03.jpg" target="_blank">
+            <div id="item"><img src="img/pa03.jpg" alt=""></div>
+        </a>
+        <a href="img/pa04.jpg" target="_blank">
+            <div id="item"><img src="img/pa04.jpg" alt=""></div>
+        </a>
+        <a href="img/pa05.jpg" target="_blank">
+            <div id="item"><img src="img/pa05.jpg" alt=""></div>
+        </a>
+        <a href="img/pa06.jpg" target="_blank">
+            <div id="item"><img src="img/pa06.jpg" alt=""></div>
+        </a>
+        <a href="img/pa07.jpg" target="_blank">
+            <div id="item"><img src="img/pa07.jpg" alt=""></div>
+        </a>
+        <a href="img/pa08.jpg" target="_blank">
+            <div id="item"><img src="img/pa08.jpg" alt=""></div>
+        </a>
+        <a href="img/pa09.jpg" target="_blank">
+            <div id="item"><img src="img/pa09.jpg" alt=""></div>
+        </a>
+        <a href="img/pa10.jpg" target="_blank">
+            <div id="item"><img src="img/pa10.jpg" alt=""></div>
+        </a>
+        <a href="img/pa11.jpg" target="_blank">
+            <div id="item"><img src="img/pa11.jpg" alt=""></div>
+        </a>
+        <a href="img/pa12.jpg" target="_blank">
+            <div id="item"><img src="img/pa12.jpg" alt=""></div>
+        </a>
+        <a href="img/img13.jpg" target="_blank">
+            <div id="item"><img src="img/img13.jpg" alt=""></div>
+        </a>
+    </div>
+
     <footer>
         Todos Direitos Reservado Dalva Decorações<br>Desenvolvido por <strong>André Nascimento</strong>
      </footer>
