--- a/persianas.html
+++ b/persianas.html
@@ -14,7 +14,7 @@
             margin: 30px;
             border-radius: 20px;
             display: flex;
-            justify-content: space-around;
+            flex-wrap: wrap;            
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
 
@@ -22,8 +22,8 @@
             background-color: rgba(236, 236, 236, 0.815);
             margin: 30px;
             border-radius: 20px;
-            display: flex;
-            justify-content: space-around;
+            display: flex;            
+            flex-wrap: wrap;            
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
 
@@ -32,7 +32,8 @@
             margin: 30px;
             border-radius: 20px;
             display: flex;
-            justify-content: space-around;
+            flex-wrap: wrap;
+            
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
 
@@ -41,14 +42,15 @@
             margin: 30px;
             border-radius: 20px;
             display: flex;
-            justify-content: space-around;
+            flex-wrap: wrap;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
  
         #item img{
             height: 200px;
             width: 200px;
-            margin: 10px;           
+            margin: 10px;  
+                    
         }
 
         .titulo{
