--- a/contato.html
+++ b/contato.html
@@ -13,13 +13,13 @@
 
         div > iframe{
             border-radius: 20px;
-            margin: 20px;
+            margin: auto;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.671);
         }
 
         .container{
             display: flex;
-            justify-content: space-around;
+            flex-wrap: wrap;
         }
 
         .item2{
