--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
 
         div > iframe{
             border-radius: 20px;
-            margin: auto;
+            margin-left: 100px;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.671);
         }
 
@@ -35,7 +35,26 @@
             text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.705) ;
         }
 
+        @media (max-width: 800px){
+            div > iframe{
+                width: 300px;
+                margin-left: 55px;
+                margin-bottom: 30px;
+            }
 
+            .item2{
+                width: 350px;
+                height: 150px;
+            }
+
+            h2{
+                font-size: 1em;
+            }
+
+            p{
+                font-size: 25px;
+            }
+        }
 
     </style>
 </head>
