--- a/sobre.html
+++ b/sobre.html
@@ -32,6 +32,7 @@
             display: flex;
             align-items: center;
             border-radius: 10px;
+            border: 2px solid #fff;
         }
 
         .sobre iframe{
@@ -39,6 +40,18 @@
             display: flex;
             align-items: center;
             border-radius: 10px;
+            border: 2px solid #fff;
+        }
+
+        @media (max-width: 900px){
+            .sobre{
+                width: 400px;
+                margin-left: 55px;
+                margin-bottom: 30px;
+                align-items: center;
+            }
+
+            
         }
     </style>
 </head>
