--- a/sobre.html
+++ b/sobre.html
@@ -46,7 +46,7 @@
         @media (max-width: 900px){
             .sobre{
                 width: 300px;
-                margin-left: 55px;
+                margin: auto;
                 margin-bottom: 30px;
                 align-items: center;
             }
