--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     
 </head>
 
-<body background="img/persianafull.jpg">
+<body>
     <h1><strong>Dalva Decorações</strong></h1>
     <header>
-        <a href="https://www.facebook.com/dalvacortinas/" target="_blank"><img src="img/facebook.png" width="30px"></a>
-        <a href="https://www.instagram.com/dalvadecoracoess" target="_blank"><img src="img/insta.png" width="30px"></a>
+        <a href="https://www.facebook.com/dalvacortinas/" target="_blank"><img src="img/face.png" width="30px"></a>
+        <a href="https://www.instagram.com/dalvadecoracoess" target="_blank"><img src="img/insta1.png" width="30px"></a>
     </header>
     <input type="checkbox" id="chec">
     <label for="chec">
