--- a/sobre.html
+++ b/sobre.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="img/cortina.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
         .sobre{
             width: 900px;
             background: rgba(0, 0, 0, 0.438);
@@ -16,6 +19,12 @@
             border-radius: 10px;
             padding: 20px;
             margin-bottom: 50px;
+        }
+
+        .sobre h2{
+            text-align: center;
+            color: #fff;
+            font-family: 'Bebas Neue', cursive;
         }
 
         .sobre p{
@@ -61,6 +70,7 @@
     <!---sobre--->
 
     <section class="sobre">
+        <h2>Como tudo começou</h2>
         <p>Somos uma empresa experiente com mais de 20 anos de experincia no ramo de Cortinas, além da loja temos nosssa própria confecção, 
             e varias lojas de Sorocaba e até de nossa região confeccciona suas cortinas com nossa equipe, a dona da loja Francisca mais conhecida como Dalva desde criança, começou sua carreira como faxineira em uma fabrica de cortinas, apos alguns anos nesse oficio surgiu uma oportunidade para ela começar a trabalhar no setor de costura da fabrica mesmo nunca antes ter feito uma cortina, mais com muito esforço de sua parte ela aprendeu a profissão e assim seguiu por varios anos trabalhando nesta mesma fabrica na confecção de cortinas até que no final dos 90 com incentivo de seu filho ela resolve abrir sua primeira loja de cortinas não durando nem 1 ano de vida ela teve que fechar a loja até porque ela ainda continuava trabalhando na farica e quem cuidava da loja era seu filho que na epoca tinha seus 14 anos apenas então sem nenhum preparo essa primeira tentativa nao foi muito feliz, mais anos depois seu filho volta a por na cabeça dela que teria que tentar novamente e assim eles voltam a abrir a loja no mesmo lugar.<i class="fa fa-level-down"></i></p><br> <img src="img/loja1.jpg"><br><iframe width="560" height="315" src="https://www.youtube.com/embed/SDktnwzDHu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a><br>
         <p>Graças a deus dessa vez deu certo algum tempo depois ela saiu de vez da fabrica para se dedicar inteiramente a sua loja, alguns anos depois ela se mudou para outro bairro com sua familia e migrou sua loja para la também, certa epoca ela tentou uma sociedade com amigo da familia mais infelizmente nao deu certo até que surgiu a oportunidade dela comprar a loja de uma pessoa que levava serviço para ela em sua loja/oficina de costura, essa loja é onde se encontra hoje no centro de nossa cidade e ali ja se encontra a quase 10 anos sobre sua administração.<i class="fa fa-level-down"></i></p><br><img src="img/loja2.jpg"><br><iframe width="560" height="315" src="https://www.youtube.com/embed/FtfM--cDdZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -71,7 +81,7 @@
     <a href="https://api.whatsapp.com/send?phone=5515988031417&text=Gostaria%20de%20um%20orçamento" target="_blank" style="position:fixed;bottom:60px;right:30px;"> <svg enable-background="new 0 0 512 512" width="50" height="50" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path d="M256.064,0h-0.128l0,0C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104 l98.4-31.456C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z" fill="#4CAF50"/><path d="m405.02 361.5c-6.176 17.44-30.688 31.904-50.24 36.128-13.376 2.848-30.848 5.12-89.664-19.264-75.232-31.168-123.68-107.62-127.46-112.58-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624 26.176-62.304c6.176-6.304 16.384-9.184 26.176-9.184 3.168 0 6.016 0.16 8.576 0.288 7.52 0.32 11.296 0.768 16.256 12.64 6.176 14.88 21.216 51.616 23.008 55.392 1.824 3.776 3.648 8.896 1.088 13.856-2.4 5.12-4.512 7.392-8.288 11.744s-7.36 7.68-11.136 12.352c-3.456 4.064-7.36 8.416-3.008 15.936 4.352 7.36 19.392 31.904 41.536 51.616 28.576 25.44 51.744 33.568 60.032 37.024 6.176 2.56 13.536 1.952 18.048-2.848 5.728-6.176 12.8-16.416 20-26.496 5.12-7.232 11.584-8.128 18.368-5.568 6.912 2.4 43.488 20.48 51.008 24.224 7.52 3.776 12.48 5.568 14.304 8.736 1.792 3.168 1.792 18.048-4.384 35.52z" fill="#FAFAFA"/></svg> </a>
 
     <footer>
-        Todos Direitos Reservado Dalva Decorações<br>Desenvolvido por <strong>André Nascimento</strong>
+        Todos Direitos Reservados a <strong>Dalva Decorações</strong> <i class="fa fa-registered"></i><br>Desenvolvido com <i class="fa fa-heart-o"></i> <strong><a href="https://www.instagram.com/studio_a_personalizados" target="_blank">Studio A</a></strong>
      </footer>
     
      
