--- a/cortinas.html
+++ b/cortinas.html
@@ -16,14 +16,14 @@
            border-radius: 20px;
            display: flex;
            flex-wrap: wrap;
-           
+           align-items: center;
            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
        }
 
        #item img{
            height: 200px;
            width: 200px;
-           margin: 10px;           
+           margin: 10px;          
        }
         
     </style>
