ajustes de centralização

--- a/papel.html
+++ b/papel.html
@@ -16,7 +16,8 @@
             border-radius: 20px;
             display: flex;
             flex-wrap: wrap;
-            
+            justify-content: center;
+            align-items: center;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
  
