--- a/cortinas.html
+++ b/cortinas.html
@@ -16,6 +16,7 @@
            border-radius: 20px;
            display: flex;
            flex-wrap: wrap;
+           justify-content: center;
            align-items: center;
            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
        }
