--- a/persianas.html
+++ b/persianas.html
@@ -15,7 +15,9 @@
             margin: 30px;
             border-radius: 20px;
             display: flex;
-            flex-wrap: wrap;            
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;            
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
 
@@ -24,7 +26,9 @@
             margin: 30px;
             border-radius: 20px;
             display: flex;            
-            flex-wrap: wrap;            
+            flex-wrap: wrap; 
+            justify-content: center;
+            align-items: center;           
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
 
@@ -34,7 +38,8 @@
             border-radius: 20px;
             display: flex;
             flex-wrap: wrap;
-            
+            justify-content: center;
+            align-items: center;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
 
@@ -44,6 +49,8 @@
             border-radius: 20px;
             display: flex;
             flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
  
