--- a/tapete.html
+++ b/tapete.html
@@ -16,6 +16,8 @@
             border-radius: 20px;
             display: flex;
             justify-content: space-around;
+            justify-content: center;
+            align-items: center;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.459);
         }
  
