add nova pagina

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <nav>
         <ul>
             <li><a href="#">INICIO</a></li>
+            <li><a href="orcamento.html">ORÇAMENTO</a></li>
             <li><a href="cortinas.html">CORTINAS</a></li>
             <li><a href="persianas.html">PERSIANAS</a></li>
             <li><a href="tapete.html">TAPETES</a></li>
